# computer_graphics_project

./: .clang-format  .gitignore  CMakeLists.txt  COMMANDS_EXAMPLES.md  Makefile
core/: CMakeLists.txt
core/include/core/: Cli.hpp  Error.hpp  Lighting.hpp  Model.hpp  Projection.hpp  Render.hpp  Transform.hpp  Utils.hpp  model.hpp
core/src/: Cli.cpp  Lighting.cpp  Model.cpp  Projection.cpp  Render.cpp  Transform.cpp  Utils.cpp  model.cpp
